crates/otter-vm/tests/compile_fail/heap_is_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
 --> tests/compile_fail/heap_is_not_send.rs:9:17
  |
9 |     assert_send(heap);
  |     ----------- ^^^^ `*const ()` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `GcHeap`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `ExtraRoots`
 --> $WORKSPACE/crates/otter-gc/src/extra_roots.rs
  |
  | pub struct ExtraRoots {
  |            ^^^^^^^^^^
note: required because it appears within the type `Option<ExtraRoots>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `GcHeap`
 --> $WORKSPACE/crates/otter-gc/src/heap.rs
  |
  | pub struct GcHeap {
  |            ^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/heap_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>(_t: T) {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut GcHeader` cannot be sent between threads safely
 --> tests/compile_fail/heap_is_not_send.rs:9:17
  |
9 |     assert_send(heap);
  |     ----------- ^^^^ `*mut GcHeader` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `GcHeap`, the trait `Send` is not implemented for `*mut GcHeader`
note: required because it appears within the type `PhantomData<*mut GcHeader>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<*mut GcHeader>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `VecDeque<*mut GcHeader>`
 --> $RUST/alloc/src/collections/vec_deque/mod.rs
  |
  | pub struct VecDeque<
  |            ^^^^^^^^
note: required because it appears within the type `otter_gc::marking::MarkingState`
 --> $WORKSPACE/crates/otter-gc/src/marking.rs
  |
  | pub struct MarkingState {
  |            ^^^^^^^^^^^^
note: required because it appears within the type `GcHeap`
 --> $WORKSPACE/crates/otter-gc/src/heap.rs
  |
  | pub struct GcHeap {
  |            ^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/heap_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>(_t: T) {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const (dyn FrameRoots + 'static)` cannot be sent between threads safely
 --> tests/compile_fail/heap_is_not_send.rs:9:17
  |
9 |     assert_send(heap);
  |     ----------- ^^^^ `*const (dyn FrameRoots + 'static)` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `GcHeap`, the trait `Send` is not implemented for `*const (dyn FrameRoots + 'static)`
note: required because it appears within the type `PhantomData<*const (dyn FrameRoots + 'static)>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<*const (dyn FrameRoots + 'static)>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<*const (dyn FrameRoots + 'static)>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `FrameRootProviders`
 --> $WORKSPACE/crates/otter-gc/src/frame_roots.rs
  |
  | pub struct FrameRootProviders {
  |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `GcHeap`
 --> $WORKSPACE/crates/otter-gc/src/heap.rs
  |
  | pub struct GcHeap {
  |            ^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/heap_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>(_t: T) {}
  |                   ^^^^ required by this bound in `assert_send`
